rhai/codegen/ui_tests/rhai_fn_getter_conflict.stderr
error: conflicting setter
  --> $DIR/rhai_fn_getter_conflict.rs:12:42
   |
12 |     #[rhai_fn(name = "foo", get = "foo", set = "bar")]
   |                                          ^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_getter_conflict.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
